frontend/test/should_fail/defYield_005.grg
using defYield;

test t
{
	y:B;
	pp:p(--- yield x, yield y);
---
	def x:B;
}

pattern p(x:B --- def z:B)
{
	y:B;
---
	yield { yield x = y; }
}

